--- a/build.gradle
+++ b/build.gradle
@@ -29,17 +29,20 @@ jar {
 
 project.ext {
 	log4jVersion = '2.2'
+	commonsioVersion = '1.3.2'
 }
 
 webAppDirName = 'WebContent'
 
 dependencies {
+	compile group: 'org.apache.commons', name: 'commons-io', version: project.commonsioVersion
 	compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: project.log4jVersion
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: project.log4jVersion
     compile group: 'org.springframework.ws',   name: 'spring-ws-core', version: '2.3.0.RELEASE'
     compile group: 'com.sun.xml.bind',   name: 'jaxb-xjc', version: '2.2.4-1'
     compile group: 'org.springframework.boot',   name: 'spring-boot-starter-ws', version: '1.4.0.RELEASE'
     compile group: 'org.springframework.ws', name: 'spring-ws-security', version: '2.3.0.RELEASE'
+    compile group: 'com.google.guava', name: 'guava', version: '19.0'
     
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
