--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ jar {
 project.ext {
 	log4jVersion = '2.2'
 	commonsioVersion = '1.3.2'
+	nettyVersion = '5.0.0.Alpha2'
 }
 
 webAppDirName = 'WebContent'
@@ -43,6 +44,7 @@ dependencies {
     compile group: 'org.springframework.boot',   name: 'spring-boot-starter-ws', version: '1.4.0.RELEASE'
     compile group: 'org.springframework.ws', name: 'spring-ws-security', version: '2.3.0.RELEASE'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
+    compile group: 'io.netty',					name: 'netty-all', 			version: project.nettyVersion
     
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
