fix log4j2 config file

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 
 jar {
     manifest {
-        attributes 'Implementation-Title': 'WialonSOAP',
+        attributes 'Implementation-Title': 'wialonsoap',
                    'Implementation-Version': version
     }
 }
